<resources>
    <string name="app_name">YiRae</string>
    <string name="main_title">&#x7167;&#x7247;&#x6545;&#x4E8B;&#x672C;</string>
    <string name="add_story">&#x6DFB;&#x52A0;&#x56DE;&#x5FC6;</string>
    <string name="calendar_view">&#x65E5;&#x5386;&#x89C6;&#x56FE;</string>
    <string name="favorite_stories">&#x6536;&#x85CF;&#x56DE;&#x5FC6;</string>
    <string name="view_all_stories">&#x67E5;&#x770B;&#x5168;&#x90E8;&#x56DE;&#x5FC6;</string>
    <string name="local_settings">&#x672C;&#x5730;&#x8BBE;&#x7F6E;</string>
    <string name="search">&#x641C;&#x7D22;</string>
    <string name="delete">&#x5220;&#x9664;</string>
    <string name="delete_story">&#x5220;&#x9664;&#x56DE;&#x5FC6;</string>
    <string name="share_story">&#x5206;&#x4EAB;&#x56DE;&#x5FC6;</string>
    <string name="delete_story_confirm">&#x786E;&#x5B9A;&#x5220;&#x9664;&#x8FD9;&#x6761;&#x56DE;&#x5FC6;&#x5417;&#xFF1F;</string>
    <string name="favorite_story">&#x52A0;&#x5165;&#x6536;&#x85CF;</string>
    <string name="unfavorite_story">&#x53D6;&#x6D88;&#x6536;&#x85CF;</string>
    <string name="favorite_badge">&#x5DF2;&#x6536;&#x85CF;</string>
    <string name="favorite_story_summary">&#x6536;&#x85CF;&#x56DE;&#x5FC6;&#xFF1A;%1$d &#x6761;</string>
    <string name="hint_search_keyword">&#x8F93;&#x5165;&#x5173;&#x952E;&#x8BCD;&#x641C;&#x7D22;&#x56DE;&#x5FC6;</string>
    <string name="hint_nickname">&#x8BF7;&#x8F93;&#x5165;&#x6635;&#x79F0;</string>
    <string name="hint_lock_password">&#x8BF7;&#x8BBE;&#x7F6E;&#x5E94;&#x7528;&#x9501;&#x5BC6;&#x7801;</string>
    <string name="hint_confirm_lock_password">&#x8BF7;&#x518D;&#x6B21;&#x8F93;&#x5165;&#x5BC6;&#x7801;</string>
    <string name="hint_new_password_optional">&#x65B0;&#x5BC6;&#x7801;&#xFF08;&#x4E0D;&#x586B;&#x5219;&#x4FDD;&#x6301;&#x4E0D;&#x53D8;&#xFF09;</string>
    <string name="input_password_to_unlock">&#x8F93;&#x5165;&#x5BC6;&#x7801;&#x4EE5;&#x89E3;&#x9501;</string>
    <string name="forgot_password">&#x5FD8;&#x8BB0;&#x5BC6;&#x7801;</string>
    <string name="cancel_reset_password">&#x53D6;&#x6D88;&#x91CD;&#x7F6E;</string>
    <string name="password_reset_hint">&#x8BF7;&#x5148;&#x901A;&#x8FC7;&#x624B;&#x673A;&#x7CFB;&#x7EDF;&#x9A8C;&#x8BC1;&#xFF0C;&#x7136;&#x540E;&#x8BBE;&#x7F6E;&#x65B0;&#x5BC6;&#x7801;&#x3002;</string>
    <string name="verify_nickname_to_reset">&#x9A8C;&#x8BC1;&#x6635;&#x79F0;&#x540E;&#x91CD;&#x7F6E;&#x5BC6;&#x7801;</string>
    <string name="verify_device_to_reset">&#x8BF7;&#x5148;&#x901A;&#x8FC7;&#x624B;&#x673A;&#x9501;&#x5C4F;&#x5BC6;&#x7801;&#x3001;&#x56FE;&#x6848;&#x6216;&#x6307;&#x7EB9;&#x9A8C;&#x8BC1;</string>
    <string name="reset_password_title">&#x91CD;&#x7F6E;&#x5BC6;&#x7801;</string>
    <string name="hint_verify_nickname">&#x8BF7;&#x8F93;&#x5165;&#x5DF2;&#x8BBE;&#x7F6E;&#x7684;&#x6635;&#x79F0;</string>
    <string name="hint_new_password">&#x8BF7;&#x8F93;&#x5165;&#x65B0;&#x5BC6;&#x7801;</string>
    <string name="reset_password">&#x9A8C;&#x8BC1;&#x5E76;&#x91CD;&#x7F6E;</string>
    <string name="password_reset_success">&#x5BC6;&#x7801;&#x5DF2;&#x91CD;&#x7F6E;&#xFF0C;&#x8BF7;&#x4F7F;&#x7528;&#x65B0;&#x5BC6;&#x7801;&#x767B;&#x5F55;</string>
    <string name="error_nickname_incorrect">&#x6635;&#x79F0;&#x9A8C;&#x8BC1;&#x5931;&#x8D25;</string>
    <string name="device_verification_required">&#x9700;&#x8981;&#x5148;&#x901A;&#x8FC7;&#x7CFB;&#x7EDF;&#x9A8C;&#x8BC1;&#x624D;&#x80FD;&#x91CD;&#x7F6E;&#x5BC6;&#x7801;</string>
    <string name="device_lock_not_configured">&#x8BF7;&#x5148;&#x5728;&#x624B;&#x673A;&#x7CFB;&#x7EDF;&#x4E2D;&#x8BBE;&#x7F6E;&#x9501;&#x5C4F;&#x5BC6;&#x7801;&#x3001;&#x56FE;&#x6848;&#x6216;&#x6307;&#x7EB9;&#xFF0C;&#x7136;&#x540E;&#x518D;&#x91CD;&#x7F6E;&#x5E94;&#x7528;&#x5BC6;&#x7801;</string>
    <string name="device_verification_unavailable">&#x65E0;&#x6CD5;&#x8C03;&#x7528;&#x7CFB;&#x7EDF;&#x9A8C;&#x8BC1;</string>
    <string name="selection_count_summary">&#x5DF2;&#x9009;&#x4E2D; %1$d &#x6761;&#x56DE;&#x5FC6;</string>
    <string name="hint_title">&#x8BF7;&#x8F93;&#x5165;&#x6807;&#x9898;</string>
    <string name="hint_date">&#x8BF7;&#x8F93;&#x5165;&#x65E5;&#x671F;</string>
    <string name="hint_place">&#x8BF7;&#x8F93;&#x5165;&#x5730;&#x70B9;</string>
    <string name="hint_people">&#x8BF7;&#x8F93;&#x5165;&#x4EBA;&#x7269;</string>
    <string name="hint_tags">&#x8BF7;&#x8F93;&#x5165;&#x6807;&#x7B7E;&#xFF0C;&#x4F7F;&#x7528;&#x9017;&#x53F7;&#x5206;&#x9694;</string>
    <string name="hint_memory">&#x8BF7;&#x8F93;&#x5165;&#x56DE;&#x5FC6;&#x5185;&#x5BB9;</string>
    <string name="label_pick_date">&#x8BF7;&#x9009;&#x62E9;&#x65E5;&#x671F;&#x4E0E;&#x53EF;&#x9009;&#x65F6;&#x95F4;</string>
    <string name="select_date">&#x9009;&#x62E9;&#x65E5;&#x671F;</string>
    <string name="select_time_optional">&#x9009;&#x62E9;&#x65F6;&#x95F4;&#xFF08;&#x53EF;&#x9009;&#xFF09;</string>
    <string name="clear_time">&#x6E05;&#x9664;&#x65F6;&#x95F4;</string>
    <string name="no_date_selected">&#x672A;&#x9009;&#x62E9;&#x65E5;&#x671F;&#xFF0C;&#x9ED8;&#x8BA4;&#x4F7F;&#x7528;&#x4ECA;&#x5929;</string>
    <string name="no_time_selected">&#x672A;&#x9009;&#x62E9;&#x5177;&#x4F53;&#x65F6;&#x95F4;</string>
    <string name="selected_date_value">&#x5DF2;&#x9009;&#x65E5;&#x671F;&#xFF1A;%1$s</string>
    <string name="selected_time_value">&#x5DF2;&#x9009;&#x65F6;&#x95F4;&#xFF1A;%1$s</string>
    <string name="select_image">&#x9009;&#x62E9;&#x56FE;&#x7247;</string>
    <string name="select_images">&#x9009;&#x62E9;&#x591A;&#x5F20;&#x56FE;&#x7247;</string>
    <string name="clear_images">&#x6E05;&#x7A7A;&#x56FE;&#x7247;</string>
    <string name="no_image_selected">&#x672A;&#x9009;&#x62E9;&#x56FE;&#x7247;</string>
    <string name="selected_image">&#x5DF2;&#x9009;&#x62E9;&#x56FE;&#x7247;&#xFF1A;%1$s</string>
    <string name="selected_images">&#x5DF2;&#x9009;&#x62E9; %1$d &#x5F20;&#x56FE;&#x7247;&#xFF1A;%2$s</string>
    <string name="load_remote_story">&#x52A0;&#x8F7D;&#x7F51;&#x7EDC;&#x793A;&#x4F8B;</string>
    <string name="remote_story_title">&#x7F51;&#x7EDC;&#x793A;&#x4F8B;&#x6807;&#x9898;&#xFF1A;%1$s</string>
    <string name="remote_story_content">&#x7F51;&#x7EDC;&#x793A;&#x4F8B;&#x5185;&#x5BB9;&#xFF1A;%1$s</string>
    <string name="remote_story_idle">&#x672A;&#x52A0;&#x8F7D;&#x7F51;&#x7EDC;&#x6570;&#x636E;</string>
    <string name="remote_story_loading">&#x6B63;&#x5728;&#x901A;&#x8FC7;&#x7F51;&#x7EDC;&#x52A0;&#x8F7D;&#x793A;&#x4F8B;&#x6570;&#x636E;&#x2026;</string>
    <string name="remote_story_loaded">&#x7F51;&#x7EDC;&#x6570;&#x636E;&#x5DF2;&#x586B;&#x5165;&#x7F16;&#x8F91;&#x533A;</string>
    <string name="remote_story_failed">&#x7F51;&#x7EDC;&#x6570;&#x636E;&#x52A0;&#x8F7D;&#x5931;&#x8D25;&#xFF1A;%1$s</string>
    <string name="remote_story_image">&#x7F51;&#x7EDC;&#x793A;&#x4F8B;&#x56FE;&#x7247;</string>
    <string name="prev_image">&#x4E0A;&#x4E00;&#x5F20;&#x56FE;&#x7247;</string>
    <string name="next_image">&#x4E0B;&#x4E00;&#x5F20;&#x56FE;&#x7247;</string>
    <string name="prev_story">&#x4E0A;&#x4E00;&#x6761;&#x56DE;&#x5FC6;</string>
    <string name="next_story">&#x4E0B;&#x4E00;&#x6761;&#x56DE;&#x5FC6;</string>
    <string name="story_image">&#x56DE;&#x5FC6;&#x56FE;&#x7247;</string>
    <string name="save">&#x4FDD;&#x5B58;</string>
    <string name="save_changes">&#x4FDD;&#x5B58;&#x4FEE;&#x6539;</string>
    <string name="edit_story">&#x7F16;&#x8F91;&#x56DE;&#x5FC6;</string>
    <string name="label_title">&#x6807;&#x9898;</string>
    <string name="label_date">&#x65F6;&#x95F4;&#xFF1A;</string>
    <string name="label_place">&#x5730;&#x70B9;&#xFF1A;</string>
    <string name="label_people">&#x4EBA;&#x7269;&#xFF1A;</string>
    <string name="label_tags">&#x6807;&#x7B7E;&#xFF1A;</string>
    <string name="label_memory">&#x56DE;&#x5FC6;&#x5185;&#x5BB9;&#xFF1A;</string>
    <string name="no_title">&#x65E0;&#x6807;&#x9898;</string>
    <string name="detail_date">&#x65F6;&#x95F4;&#xFF1A;%1$s</string>
    <string name="detail_place">&#x5730;&#x70B9;&#xFF1A;%1$s</string>
    <string name="detail_people">&#x4EBA;&#x7269;&#xFF1A;%1$s</string>
    <string name="detail_tags">&#x6807;&#x7B7E;&#xFF1A;%1$s</string>
    <string name="detail_memory">&#x56DE;&#x5FC6;&#x5185;&#x5BB9;&#xFF1A;%1$s</string>
    <string name="all_story_summary">&#x5168;&#x90E8;&#x56DE;&#x5FC6;&#xFF1A;%1$d &#x6761;</string>
    <string name="search_result_summary">&#x641C;&#x7D22;&#x201C;%1$s&#x201D;&#xFF1A;%2$d &#x6761;&#x7ED3;&#x679C;</string>
    <string name="calendar_summary">%1$s &#x7684;&#x56DE;&#x5FC6;&#xFF1A;%2$d &#x6761;</string>
    <string name="month_summary">%1$s &#x672C;&#x6708;&#x56DE;&#x5FC6;&#xFF1A;%2$d &#x6761;</string>
    <string name="no_story_summary">&#x672A;&#x586B;&#x5199;&#x8BE6;&#x7EC6;&#x5185;&#x5BB9;</string>
    <string name="swipe_hint_default">&#x5728;&#x56FE;&#x7247;&#x4E0A;&#x5DE6;&#x53F3;&#x6ED1;&#x52A8;&#x67E5;&#x770B;&#x5176;&#x4ED6;&#x56DE;&#x5FC6;</string>
    <string name="swipe_hint">&#x5DE6;&#x53F3;&#x6ED1;&#x52A8;&#x5207;&#x6362;&#x56DE;&#x5FC6; %1$d/%2$d</string>
    <string name="image_index_hint">&#x56FE;&#x7247;&#x5DE6;&#x53F3;&#x6ED1;&#x52A8;&#x5207;&#x6362; %1$d/%2$d</string>
    <string name="empty_story_list">&#x8FD8;&#x6CA1;&#x6709;&#x56DE;&#x5FC6;&#xFF0C;&#x53BB;&#x6DFB;&#x52A0;&#x7B2C;&#x4E00;&#x6761;&#x5427;</string>
    <string name="empty_favorite_list">&#x8FD8;&#x6CA1;&#x6709;&#x6536;&#x85CF;&#x7684;&#x56DE;&#x5FC6;</string>
    <string name="empty_search_result">&#x6CA1;&#x6709;&#x627E;&#x5230;&#x5339;&#x914D;&#x7684;&#x56DE;&#x5FC6;</string>
    <string name="no_tags">&#x6682;&#x65E0;&#x6807;&#x7B7E;</string>
    <string name="story_saved_success">&#x56DE;&#x5FC6;&#x5DF2;&#x4FDD;&#x5B58;</string>
    <string name="favorite_added_success">&#x5DF2;&#x52A0;&#x5165;&#x6536;&#x85CF;</string>
    <string name="favorite_removed_success">&#x5DF2;&#x53D6;&#x6D88;&#x6536;&#x85CF;</string>
    <string name="security_setup_title">&#x6B22;&#x8FCE;&#x4F7F;&#x7528;&#x4F60;&#x7684;&#x56DE;&#x5FC6;&#x76F8;&#x518C;</string>
    <string name="security_unlock_title">%1$s&#xFF0C;&#x6B22;&#x8FCE;&#x56DE;&#x6765;</string>
    <string name="privacy_notice">&#x9690;&#x79C1;&#x63D0;&#x793A;&#xFF1A;&#x4F60;&#x7684;&#x6635;&#x79F0;&#x4E0E;&#x56DE;&#x5FC6;&#x5185;&#x5BB9;&#x4EC5;&#x4FDD;&#x5B58;&#x5728;&#x672C;&#x673A;&#x3002;&#x53EA;&#x6709;&#x5728;&#x4F60;&#x4E3B;&#x52A8;&#x70B9;&#x51FB;&#x5206;&#x4EAB;&#x65F6;&#xFF0C;&#x5185;&#x5BB9;&#x624D;&#x4F1A;&#x88AB;&#x53D1;&#x9001;&#x7ED9;&#x5176;&#x4ED6;&#x5E94;&#x7528;&#x3002;</string>
    <string name="privacy_notice_short">&#x9690;&#x79C1;&#x4FE1;&#x606F;&#x4EC5;&#x4FDD;&#x5B58;&#x5728;&#x672C;&#x673A;&#xFF0C;&#x5206;&#x4EAB;&#x65F6;&#x624D;&#x4F1A;&#x5916;&#x53D1;&#x3002;</string>
    <string name="save_and_enter">&#x4FDD;&#x5B58;&#x5E76;&#x8FDB;&#x5165;</string>
    <string name="unlock_app">&#x89E3;&#x9501;&#x8FDB;&#x5165;</string>
    <string name="save_settings">&#x4FDD;&#x5B58;&#x8BBE;&#x7F6E;</string>
    <string name="settings_saved_success">&#x672C;&#x5730;&#x8BBE;&#x7F6E;&#x5DF2;&#x4FDD;&#x5B58;</string>
    <string name="error_nickname_required">&#x8BF7;&#x5148;&#x8F93;&#x5165;&#x6635;&#x79F0;</string>
    <string name="error_password_length">&#x5BC6;&#x7801;&#x81F3;&#x5C11;&#x9700;&#x8981;&#x20;4&#x20;&#x4F4D;</string>
    <string name="error_password_not_match">&#x4E24;&#x6B21;&#x8F93;&#x5165;&#x7684;&#x5BC6;&#x7801;&#x4E0D;&#x4E00;&#x81F4;</string>
    <string name="error_password_incorrect">&#x5BC6;&#x7801;&#x4E0D;&#x6B63;&#x786E;</string>
    <string name="nickname_greeting">&#x4F60;&#x597D;&#xFF0C;%1$s</string>
    <string name="export_markdown">Markdown &#x5BFC;&#x51FA;</string>
    <string name="export_json">JSON &#x5BFC;&#x51FA;</string>
    <string name="export_markdown_success">Markdown &#x5BFC;&#x51FA;&#x5DF2;&#x51C6;&#x5907;&#x597D;</string>
    <string name="export_json_success">JSON &#x5BFC;&#x51FA;&#x5DF2;&#x51C6;&#x5907;&#x597D;</string>
    <string name="export_failed">&#x5BFC;&#x51FA;&#x5931;&#x8D25;</string>
</resources>