<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_album">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@drawable/bg_card_paper"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/TextTitleAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_settings" />

        <EditText
            android:id="@+id/etSettingsNickname"
            style="@style/InputAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_nickname" />

        <TextView
            android:id="@+id/tvSettingsPrivacy"
            style="@style/TextNoteAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_notice" />

        <Button
            android:id="@+id/btnSaveSettings"
            style="@style/ButtonPrimaryAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/save_settings" />
    </LinearLayout>
</ScrollView>
